<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button4"
        android:layout_width="264dp"
        android:layout_height="53dp"
        android:layout_marginStart="74dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="74dp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/login_string"
        android:textColor="@color/my_apptheme"
        android:textSize="20sp"
        android:typeface="normal"
        app:cornerRadius="34dp"
        app:iconPadding="34dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passforgot" />

    <TextView
        android:id="@+id/Welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/welcome_back_string"
        android:textColor="#EF6C00"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/passforgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/forgot_your_password_string"
        android:textColor="#DD2C00"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/passforgot2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/dont_have_an_account_string"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/sign_up_string"
        android:textColor="#DD2C00"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/passforgot2"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <EditText
        android:id="@+id/Ema"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Welcome"
        android:layout_marginStart="24dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:background="#30000000"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="20dp"
        android:hint="@string/email_string"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:textColor="@color/my_apptheme"
        android:textColorHint="#455A64"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Welcome" />


<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/Pass"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_centerInParent="true"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/password"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/password"-->
<!--        app:layout_constraintTop_toTopOf="@+id/password"-->
<!--        app:passwordToggleEnabled="true" />-->

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="#30000000"
        android:drawableLeft="@drawable/ic_baseline_info_24"
        android:drawablePadding="20dp"
        android:hint="@string/password_string"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="#455A64"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Ema"
        app:passwordTogglenabled="true" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>